[project]
name = "dataset-monitor-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kris927b", email = "kristian.smed.noergaard@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "altair>=5.5.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.1.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "vl-convert-python>=1.8.0",
    "watchdog>=6.0.0",
]

[project.scripts]
monitor = "dataset_monitor_api_python.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
